<!--
  ~ Created by YSN Studio on 5/4/18 5:53 AM
  ~ Copyright (c) 2018. All rights reserved.
  ~
  ~ Last modified 5/3/18 10:59 PM
  -->

<resources>
    <string name="app_name">Football Club - Dicoding</string>
    <string name="title_previous_match">Prev. Match</string>
    <string name="title_next_match">Next Match</string>
    <string name="vs">VS</string>
    <string name="example_date_schedule">Sen, 05 Mar 2018</string>
    <string name="goals">Goals</string>
    <string name="n_a">N/A</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="image_view_logo_club">Image view logo club</string>
    <string name="title_favorites">Favorites</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="title_matches">Matches</string>
    <string name="title_team">Teams</string>
    <string name="choose_league">Choose League</string>
    <string name="image_view_icon_drop_down">image view icon drop down</string>
    <string name="search">Search</string>
    <string name="input_a_keyword">Input a keyword</string>
    <string name="image_view_icon_clear">image view icon clear</string>
    <string name="title_overview">Overview</string>
    <string name="title_player">Player</string>
    <string name="label_weight">Weight (Kg)</string>
    <string name="label_height">Height (m)</string>
    <string name="title_favorite_match">Favorite Match</string>
    <string name="title_favorite_team">Favorite Team</string>
    <string name="brighton">Brighton</string>
    <string name="arsenal">Arsenal</string>
    <string-array name="array_league">
        <item>English Premier League</item> <!--4328-->
        <item>English League championship</item> <!--4329-->
        <item>Scottish Premier League</item> <!--4330-->
        <item>German Bundesliga</item> <!--4331-->
        <item>Italian Serie A</item> <!--4332-->
        <item>French Ligue 1</item> <!--4334-->
        <item>Spanish La Liga</item> <!--4335-->
        <item>Greek Superleague Greece</item> <!--4336-->
        <item>Dutch Eredivisie</item> <!--4337-->
        <item>Belgian Jupiter League</item> <!--4338-->
        <item>Turkish Super Lig</item> <!--4339-->
        <item>Danish Superliga</item> <!--4340-->
        <item>Portuguese Primeira Liga</item> <!--4344-->
        <item>American Major League Soccer</item> <!--4346-->
    </string-array>
    <integer-array name="array_league_id">
        <item>4328</item>
        <item>4329</item>
        <item>4330</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
        <item>4336</item>
        <item>4337</item>
        <item>4338</item>
        <item>4339</item>
        <item>4340</item>
        <item>4344</item>
        <item>4346</item>
    </integer-array>
</resources>
