...
                android:contentDescription="@string/image_view_icon_clear"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_clear_white_24dp" />

            <EditText
                android:id="@+id/edit_text_keyword_activity_search_matches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/image_view_clear_keyword_activity_search_matches"
                android:hint="@string/input_a_keyword"
                android:imeOptions="actionSearch"
                android:textColor="@android:color/white"
...
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout_activity_search_matches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_search_activity_search_matches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.v4.widget.SwipeRefreshLayout>

    </RelativeLayout>
...
